examples/test/testpolicy16859.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16859
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key9: value2
      key45: value22
      key17: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value16
      podSelector:
        matchLabels:
          key23: value36
          key39: value45
          key35: value18
